--- a/src/main/resources/templates/search_record.html
+++ b/src/main/resources/templates/search_record.html
@@ -254,7 +254,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="card alert">
-                                <form>
+                                <form th:action="@{/selectRecord}">
                                     <div class="form_block">
                                         <h3>搜索项</h3>
                                         <div class="col-lg-4">
@@ -300,30 +300,6 @@
                                 </form>
                             </div>
                             <div class="card alert">
-                                <div class="form_block">
-                                    <h3>基本信息</h3>
-                                    <div class="col-lg-3">
-                                        <ul class="record_ul">
-                                            <li>病人ID: 201234</li>
-                                            <li>病人名称: 李思</li>
-                                            <li>性别: 女</li>
-                                            <li>年龄: 45</li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <ul class="record_ul">
-                                            <li>联系方式: 17785923931</li>
-                                            <li>身份证号: 520114199908111233</li>
-                                            <li>家庭住址: 上海市杨浦区上海财经大学</li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <ul class="record_ul">
-                                            <li>关系人姓名: 刘华</li>
-                                            <li>关系人联系方式: 17785923931</li>
-                                        </ul>
-                                    </div>
-                                </div>
                                 <div class="form_block">
                                     <h3>身体信息</h3>
                                     <div class="col-lg-3">
