--- a/src/main/resources/templates/new_patient.html
+++ b/src/main/resources/templates/new_patient.html
@@ -260,60 +260,66 @@
                                         <h3>基本信息</h3>
                                         <div class="col-lg-3">
                                             <div class="form-group">
-                                                <label> 医生ID </label>
+                                                <label> Doctor ID </label>
                                                 <input name="doctor_id" type="text" size="8">
                                             </div>
                                             <div class="form-group">
-                                                <label> 病人姓名 </label>
-                                                <input name="patient_name" type="text" size="8">
+                                                <label> Frist Name </label>
+                                                <input name="first_name" type="text" size="8">
                                             </div>
                                             <div class="form-group">
-                                                <label> 性别 </label>
+                                                <label> Last Name </label>
+                                                <input name="first_name" type="text" size="8">
+                                            </div>
+                                            <div class="form-group">
+                                                <label> Gender </label>
                                                 <input name="gender" type="text" size="8">
                                             </div>
                                             <div class="form-group">
-                                                <label> 年龄 </label>
+                                                <label> Age </label>
                                                 <input name="age" type="text" size="3">
                                             </div>
                                         </div>
                                         <div class="col-lg-4">
                                             <div class="form-group">
-                                                <label>联系方式</label>
+                                                <label>phone number</label>
                                                 <input name="contact" type="text" size='18'>
                                             </div>
                                             <div class="form-group">
-                                                <label>身份证号</label>
-                                                <input name="IDcard_No" type="text" size='18'>
+                                                <label>SSN</label>
+                                                <input name="SSN" type="text" size='10'>
                                             </div>
                                             <div class="form-group">
-                                                <label>家庭住址</label>
-                                                <input name="city" type="text" size='6'>市
-												<input name="district" type="text" size='6'>区
-												<input name="street" type="text" size='28'>
+                                                <label>Address</label>
+                                                <input name="address" type="text" size='20'>
+												<input name="city" type="text" size='6'>
+												<input name="state" type="text" size='6'>
+                                                <input name="country" type="text" size='6'>
+                                                <input name="code" type="text" size='6'>
                                             </div>
                                         </div>
                                         <div class="col-lg-5">
                                             <div class="form-group">
-                                                <label>关系人姓名</label>
+                                                <label>emergency contact name</label>
                                                 <input name="related_name" type="text" size="6">
                                             </div>
                                             <div class="form-group">
-                                                <label>关系人联系方式</label>
+                                                <label>emergency contact number</label>
                                                 <input name="related_phonenumber" type="text" size="18"><br/>
                                             </div>
                                             <div class="form-group">
-                                                <label>身高</label>
+                                                <label>Height</label>
                                                 <input name="height" type="text" size="6">cm
                                             </div>
                                             <div class="form-group">
-                                                <label>体重</label>
+                                                <label>Weight</label>
                                                 <input name="weight" type="text" size="6">kg
                                             </div>
                                         </div>
                                     </div>
                                     <div class="form_submit">
-                                        <input type="submit" value="提交" class="btn btn-default"> 
-                                        <input type="reset" value="重置" class="btn btn-default">
+                                        <input type="submit" value="Submit" class="btn btn-default">
+                                        <input type="reset" value="Reset" class="btn btn-default">
                                     </div>
                                 </form>
                             </div>
